--- a/app/styles/index.module.css
+++ b/app/styles/index.module.css
@@ -1,31 +1,44 @@
+/* shared styles */
+.subtitle {
+  font-size: 1.4rem;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+}
+
+.panel {
+  max-width: calc(100% - 1rem);
+}
+
 /* mobile responsive grid content for index / home page */
+
+.player {
+  width: 100%;
+  height: auto;
+  position: relative;
+  padding-top: 1rem;
+  max-width: calc(80% - 1rem);
+  padding-top: 0.5rem;
+}
+
 .container {
-  max-width: 100%;
+  width: 100%;
+  height: auto;
+  position: relative;
+  padding-top: 4rem;
+}
+
+.block {
+  display: block;
+  width: 100%;
   height: auto;
   position: relative;
 }
 
-.article {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 2rem;
-  padding-bottom: 6rem;
-}
-
-.subtitle h2 {
-  text-align: center;
-  font-size: 1.2rem;
-  line-height: 1.1;
-  font-weight: 600;
-  letter-spacing: 0.022rem;
-  padding-top: 0.85rem;
-  padding-bottom: 0.85rem;
-}
-
-.panel {
-  margin: 0 auto;
-  padding: 2rem 2rem 1rem;
-  max-width: 100%;
+.grid {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(1, minmax(25%, auto));
+  gap: 1rem 0.25rem;
 }
 
 .hidden {
@@ -35,51 +48,72 @@
   clip-path: inset(100%);
   clip: rect(1px, 1px, 1px, 1px);
   height: 1px;
-  overflow: hidden;
   position: absolute;
-}
-
-.grid {
-  display: grid;
-  grid-template-rows: repeat(3fr);
-  grid-template-columns: repeat(1, minmax(25%, auto));
-  gap: 0 0.25rem;
 }
 
 /* Tablet and Smaller Desktop */
 @media (min-width: 48rem) and (max-width: 60rem) {
   .grid {
-    display: grid;
-    grid-template-rows: repeat(2fr);
+    grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(1, minmax(25%, auto));
-    gap: 1rem;
   }
+
+  .block {
+    display: block;
+    width: 70%;
+    height: auto;
+    position: relative;
+    padding-top: 0rem;
+  }
+
   .container {
-    padding-top: 4rem;
+    padding-top: 0rem;
+  }
+
+  .subtitle {
+    padding-top: 0.5rem;
+    padding-bottom: 1rem;
   }
 
   .panel {
-    padding: 2rem 0rem;
-    max-width: 100%;
+    max-width: calc(80% - 4rem);
+    padding: 2rem 1rem;
   }
 }
 
 /* Desktop and larger screen */
 @media (min-width: 60rem) {
   .grid {
-    grid-template-rows: repeat(2fr);
+    grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(3, minmax(25%, auto));
-    width: 60rem;
-    gap: 1rem 1rem;
-    max-width: 100%;
   }
   .container {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-top: 0rem;
+  }
+
+  .subtitle {
+    text-align: center;
+    font-size: 1.4rem;
+    letter-spacing: 0.022rem;
+    padding-top: 0.85rem;
+    padding-bottom: 1rem;
+  }
+
+  .block {
+    display: block;
+    width: 100%;
+    height: auto;
+    position: relative;
+    padding-top: 1rem;
+  }
+
+  .player {
+    max-width: calc(40% - 9rem);
+    padding-top: 1rem;
   }
 
   .panel {
-    padding: 4rem 0rem;
-    max-width: 100%;
+    max-width: calc(80% - 4rem);
+    padding-top: 4rem;
   }
 }
